<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_margin="20dp"
    android:background="@drawable/round_login_body"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="287dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_userName"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUserNameC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_username" />

        <TextView
            android:id="@+id/textView2"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_email" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmailC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_Email"
            android:inputType="textEmailAddress" />


        <TextView
            android:id="@+id/textView3"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_password" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword1C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView4"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_password" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword2C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_password"
            android:inputType="textPassword" />


    </LinearLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_login_button"
        android:text="@string/btn_cadastrar"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" />

</LinearLayout>
